tests/golden/reject/addrlit-reject-probe.goo
package main
func main(){ p := &[]int{1, 2}; _ = p }
